fix map clipping when < min html/body width, make sidebar top of stack to prevent overlapping, fix missing </div>

--- a/index.css
+++ b/index.css
@@ -125,6 +125,8 @@ div.biography {
 	width: 100%;
 	height: 312px;
 
+	min-width: 1000px;
+
 	-webkit-box-shadow: inset 0px 0px 300px 50px rgba(0,0,0,0.1);
 	-moz-box-shadow: inset 0px 0px 300px 50px rgba(0,0,0,0.1);
 	box-shadow: inset 0px 0px 300px 50px rgba(0,0,0,0.1);
